Add the fuck URL

--- a/basics/tasks/main.yml
+++ b/basics/tasks/main.yml
@@ -16,7 +16,8 @@
     - vim
     - emacs
 
-- name: install the fuck
+# Best project ever! https://github.com/nvbn/thefuck    
+- name: install the fuck 
   pip:
     name: thefuck
     state: latest
