Add keepassx to basic installs

--- a/basics/tasks/main.yml
+++ b/basics/tasks/main.yml
@@ -17,6 +17,7 @@
     - emacs
     - emacs-goodies-el
     - bbdb
+    - keepassx
 
 # Best project ever! https://github.com/nvbn/thefuck
 - name: install the fuck
