--- a/roles/devtools/tasks/main.yml
+++ b/roles/devtools/tasks/main.yml
@@ -7,7 +7,9 @@
     state: latest
     update_cache: yes
 
-# VirtualBox
+#
+# VirtualBox tasks
+#
 - name: add virtualbox apt key
   apt_key:
     url: https://www.virtualbox.org/download/oracle_vbox_2016.asc
