Replace hard coded user name in xfce role

--- a/roles/xfce/tasks/main.yml
+++ b/roles/xfce/tasks/main.yml
@@ -3,35 +3,35 @@
 
 - name: emacs keybindings...you will like them
   command: xfconf-query -c xsettings -p /Gtk/KeyThemeName -s Emacs
-  become_user: kenneth
+  become_user: "{{ user_name }}"
 
 - name: copy xmodmaprc file
   copy:
     src: xmodmaprc
-    dest: /home/kenneth/.xmodmaprc
-    owner: kenneth
-    group: kenneth
+    dest: "/home/{{ user_name }}/.xmodmaprc"
+    owner: "{{ user_name }}"
+    group: "{{ user_name }}"
     mode: 0755
 
 - name: xfce autostart xmodmap destop file
   copy:
     src: xmodmap.desktop
-    dest: /home/kenneth/.config/autostart/
-    owner: kenneth
-    group: kenneth
+    dest: "/home/{{ user_name }}/.config/autostart/"
+    owner: "{{ user_name }}"
+    group: "{{ user_name }}"
     mode: 0755
 
 # base16 color schemes
 - name: clone the base16 repo
   git:
     repo: git clone https://github.com/chriskempson/base16-shell.git 
-    dest: /home/kenneth/.config/base16-shell
+    dest: "/home/{{ user_name }}/.config/base16-shell"
     update: no
   become: no
     
 - name: configure base16 in .bashrc
   blockinfile:
-    path: /home/kenneth/.bashrc
+    path: "/home/{{ user_name }}/.bashrc"
     block: |
       BASE16_SHELL="$HOME/.config/base16-shell/"
       [ -n "$PS1" ] && \
