--- a/roles/xfce/templates/xmodmap.desktop
+++ b/roles/xfce/templates/xmodmap.desktop
@@ -4,7 +4,7 @@ Version=0.9.4
 Type=Application
 Name=xmodmap
 Comment=keys for great justice
-Exec=/usr/bin/xmodmap /home/kenneth/.xmodmaprc
+Exec=/usr/bin/xmodmap /home/{{ user_name }}/.xmodmaprc
 OnlyShowIn=XFCE;
 StartupNotify=false
 Terminal=false
