Replace remaining hardcoded user name

--- a/roles/basics/tasks/main.yml
+++ b/roles/basics/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # Basic devbox tasks. Initial installs and so on.
 
-- name: update packages
+- name: update all packages
   apt:
     update_cache: yes
     upgrade: safe
